--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ numpy>=1.21.0
 scikit-learn>=1.0.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
+streamlit>=1.28.0
+plotly>=5.15.0
+dash>=2.14.0
+dash-bootstrap-components>=1.4.0
+streamlit-aggrid>=0.3.4
+streamlit-plotly-events>=0.0.6
